force-app/main/default/objects/Inventory__c/fields/Stock_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Stock_Status_c__c</fullName>
    <formula>IF(Stock_Quantity__c &gt; 10, &quot;Available&quot;, &quot;Low Stock&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock_Status__c</label>
    <type>Text</type>
</CustomField>