force-app/main/default/objects/Inventory__c/validationRules/Stock_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Stock_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>Stock_Quantity__c &lt;= 0</errorConditionFormula>
    <errorMessage>the inventory count is never less than zero</errorMessage>
</ValidationRule>